fixed footer alignment

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -51,4 +51,8 @@ footer {
 	margin-bottom: 10px;
 }
 
+#footer {
+	justify-content: center;
+}
+
 
